@@ -1,3 +1,5 @@
+  * Paintings now render as they should
+
 Minecraft X-Ray 2.7 Maintenance Branch 5 (2011.01.17)
 
   * Generate Windows EXE via JSmooth
